# sigil_c

./: .clang-format  .gitignore  CMakeLists.txt  build.sh  devenv.nix  flake.nix  gen_comment.py  meson.build
examples/: basics.sgl  classes_basic.sgl  closures.sgl  clox_classes.sgl  fib.sgl  functions.sgl  inheritence.sgl  lists.sgl
include/: bytecode.h  common.h  compiler.h  debug.h  hash_map.h  memory.h  object.h  value.h  vm.h
src/: CMakeLists.txt  common.h  main.c
src/compiler/: compiler.c  compiler.h  compiler_tests.c
src/debug/: debug.c  debug.h
src/error_handling/: error_handler.h
src/memory/: memory.c  memory.h
src/runtime/: bytecode.c  bytecode.h  vm.c  vm.h
src/scanner/: scanner.c  scanner.h
src/types/: hash_map.c  hash_map.h  object.c  object.h  value.c  value.h
